# timeplus-connector-registry

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py
config/: timeplusd-users.yaml
prompt/: GENERATE_CONNECTOR.md
registry/: __init__.py  config.py  database.py  main.py
registry/models/: __init__.py
registry/routers/: __init__.py  connectors.py  publishers.py  tags.py
registry/schemas/: __init__.py
registry/services/: __init__.py  connector_service.py  publisher_service.py  tag_service.py
registry/static/: index.html
registry/utils/: __init__.py  auth.py  manifest.py  sql_generator.py
samples/: NATS_COMPARISON.md  NATS_JETSTREAM_TEST.md  NATS_QUICKSTART.md  README.md  binance-trade-stream.yaml  bluesky-read-connector.yaml  coinbase-websocket-reader.yaml  finnhub-trade-stream.yaml  kafka-json-reader.yaml  kafka-string-connector.yaml  kafka-string-stream.yaml  kafka.sql  nats-jetstream-read-connector.yaml  nats-jetstream-write-connector.yaml  nats-read-connector.yaml  nats-write-connector.yaml  open-meteo-weather-connector.yaml  rss-news-connector.yaml  websocket-reader.yaml  wikipedia-eventstreams-connector.yaml
scripts/: proton_smoke_test.sh  register_samples.sh
tests/: __init__.py  conftest.py  test_connectors.py
ui/: index.html
